@startuml
'https://plantuml.com/class-diagram

!theme mars
title Algorithm Class Hierarchy

abstract class Alg {
    {abstract} play(cube, inv)
    {abstract} count(): int
    {abstract} atomic_str(): str
    {abstract} flatten(): Iterator
    inv(): Alg
    prime: Alg
    simplify(): SeqSimpleAlg
    __neg__()
    __mul__(n)
    __add__(other)
    __sub__(other)
}

together {
    abstract class SimpleAlg
    class Inv
    class Mul
    class SeqAlg
}

SimpleAlg -up[hidden]-> Alg
Alg  <|--  SimpleAlg
Alg  <|--  Inv
Alg  <|--  Mul
note top of Inv: R'
note top of Mul: R2
Alg <|-- SeqAlg
note top of SeqAlg: A sequence of algs

' under SimpleAlg
together {
    abstract class NSimpleAlg
    class AnnotationAlg

    SimpleAlg  <|--  NSimpleAlg
    SimpleAlg  <|--  AnnotationAlg
}

note top of AnnotationAlg: Not a real alg\nNeed to get rid of it

' Under NSimpleAlg
together {
    abstract class AnimationAbleAlg
}

NSimpleAlg  <|--  AnimationAbleAlg

'under AnimationAbleAlg - Base classes for Face and Slice algs
together {
    abstract class FaceAlgBase {
        slices: property
        play(cube, inv)
    }
    abstract class SliceAlgBase {
        slices: property
        play(cube, inv)
    }
    abstract class WholeCubeAlg
    class DoubleLayerAlg
}

AnimationAbleAlg  <|--  FaceAlgBase
AnimationAbleAlg  <|--  SliceAlgBase
AnimationAbleAlg  <|--  WholeCubeAlg
AnimationAbleAlg  <|--  DoubleLayerAlg

note top of DoubleLayerAlg: Rw = R[1:N-1]

' SliceAbleAlg - marker ABC for isinstance checks
abstract class SliceAbleAlg {
    {abstract} __getitem__(items)
}

note top of SliceAbleAlg: Marker ABC\nisinstance(R, SliceAbleAlg) = True\nisinstance(R[1:2], SliceAbleAlg) = False

' FaceAlg hierarchy - sliceable and sliced versions
together {
    abstract class FaceAlg {
        __getitem__(items) -> SlicedFaceAlg
    }
    class SlicedFaceAlg {
        _slices: slice | Sequence
        <s>__getitem__</s>
    }
}

FaceAlgBase  <|--  FaceAlg
FaceAlgBase  <|--  SlicedFaceAlg
SliceAbleAlg  <|--  FaceAlg

note top of FaceAlg: R, L, U, D, F, B\nCan be sliced: R[1:2]
note bottom of SlicedFaceAlg: Result of R[1:2]\nCannot be sliced again\nNOT SliceAbleAlg

' SliceAlg hierarchy - sliceable and sliced versions
together {
    abstract class SliceAlg {
        __getitem__(items) -> SlicedSliceAlg
    }
    class SlicedSliceAlg {
        _slices: slice | Sequence
        <s>__getitem__</s>
    }
}

SliceAlgBase  <|--  SliceAlg
SliceAlgBase  <|--  SlicedSliceAlg
SliceAbleAlg  <|--  SliceAlg

note top of SliceAlg: M, E, S\nCan be sliced: M[1:2]
note bottom of SlicedSliceAlg: Result of M[1:2]\nCannot be sliced again\nNOT SliceAbleAlg

' Concrete FaceAlg classes
together  {
    FaceAlg <|-- U
    FaceAlg <|-- D
    FaceAlg <|-- F
    FaceAlg <|-- B
    FaceAlg <|-- R
    FaceAlg <|-- L
}


together  {
    DoubleLayerAlg <|-- Uw
    DoubleLayerAlg <|-- Dw
    DoubleLayerAlg <|-- Fw
    DoubleLayerAlg <|-- Bw
    DoubleLayerAlg <|-- Rw
    DoubleLayerAlg <|-- Lw
}



together  {
    WholeCubeAlg <|-- X
    WholeCubeAlg <|-- Y
    WholeCubeAlg <|-- Z
}


together  {
    SliceAlg <|-- M
    SliceAlg <|-- E
    SliceAlg <|-- S
}

' try to make groups on under the other
U -down[hidden]-> S
Lw -down[hidden]-> X




@enduml
